Fixed issue where there were two main tags on the recipe gallery page. Also left aligned tags even if there are little to no recipes to show, and made the tags wrap on mobile screens.

--- a/app/components/Organisms/RecipeGallery/RecipeGallery.module.css
+++ b/app/components/Organisms/RecipeGallery/RecipeGallery.module.css
@@ -1,7 +1,12 @@
+.TagGalleryContainer {
+  width: 100%;
+}
+
 .filterBtnsContainer {
   display: flex;
   gap: 7px;
   margin: 0 20px;
+  flex-wrap: wrap;
 }
 .galleryContainer {
   column-gap: 20px;
